[package]
name = "probius-mproto"
version = "0.1.3"
edition = "2024"
description = "mproto types for probius"
repository = "https://github.com/modrpc-org/probius"
documentation = "https://docs.rs/probius"
license = "Apache-2.0"

[dependencies]
mproto = { version = "0.2", default-features = false }

[features]
default = ["std"]
std = ["mproto/std"]
alloc = ["mproto/alloc"]
