[package]
name = "probius"
version = "0.0.3"
edition = "2024"
description = "metrics and tracing system that learns the structure of your system"
repository = "https://github.com/modular-rpc/probius"
documentation = "https://docs.rs/probius"
keywords = ["metrics", "tracing", "observability"]
license = "MIT"
readme = "../../README.md"

[features]
default = []
enabled = []
tcp-sink = ["enabled", "fastrand", "pollster"]

[dependencies]
bab = "0.0"
mproto = "0.2"
probius-mproto = { version = "0.1.0", path = "../probius-mproto/rust", default-features = false, features = ["std"] }
spin = "0.9"

fastrand = { version = "2", optional = true }
pollster = { version = "0.4", optional = true }

[dev-dependencies]
pollster = "0.4"
